run pref tests form gradle and make sure build.gradle works